--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -7,6 +7,8 @@ plugins {
 mainClassName = 'App'
 
 dependencies {
+
+    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     compile 'com.google.guava:guava:23.0'
 
     testCompile 'junit:junit:4.12'
