--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -9,6 +9,9 @@ mainClassName = 'App'
 // 프로젝트에서 사용할 라이브러리 설정
 // => 라이브러리 정보는 mvnrepository.com에서 검색하여 가져온다.
 dependencies {
+    // mariadb jdbc driver 
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
+    
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
