--- a/java110-project/build.gradle
+++ b/java110-project/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'java'
     id 'eclipse-wtp'
@@ -12,17 +11,18 @@ tasks.withType(JavaCompile) {
 }
 
 // 프로젝트에서 사용할 라이브러리 설정
-// => 라이브러리 정보는 mvenrepositiry.com 에서 검색하여 가져옴
+// => 라이브러리 정보는 mvnrepository.com에서 검색하여 가져온다.
 dependencies {
-    //servlet-api 라이브러리
+    // Servlet API 라이브러리
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-
-    //Spring IoC 라이브러리
+    
+    
+    // Spring IoC 컨테이너 관련 라이브러리 
     //compile group: 'org.springframework', name: 'spring-context', version: '5.0.9.RELEASE'
     
-    // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
-    compile group: 'org.mariadb.jdbc',
-             name: 'mariadb-java-client', version: '2.3.0'
+    // mariadb jdbc driver 
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.3.0'
+    
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     compile 'com.google.guava:guava:23.0'
     testCompile 'junit:junit:4.12'
@@ -30,5 +30,5 @@ dependencies {
 
 // 라이브러리를 다운로드 받는 서버 설정
 repositories {
-    mavenCentral()
+    mavenCentral() //https://repo.maven.apache.org/maven2/
 }
