서블릿 출력 콘텐트를 일반텍스트->html

--- a/java110-project/src/main/webapp/WEB-INF/web.xml
+++ b/java110-project/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,8 @@
 
     <!--  
     <request-character-encoding>UTF-8</request-character-encoding>
+    다음태그가 안될시 
+    request.setCharacterEncoding() 이용
     -->
     <!--  Listener 배치하기 -->    
     <listener>
