--- a/java110-servlet/src/main/webapp/WEB-INF/web.xml
+++ b/java110-servlet/src/main/webapp/WEB-INF/web.xml
@@ -11,13 +11,13 @@
       웹 애플리케이션에 대한 간단한 설명을 기술한다.
     </description>
     <display-name>서버 관리페이지에 출력될 웹 애플리케이션 이름</display-name>
-    
+
     <!-- 컨텍스트 초기화 파라미터 설정 -->
     <context-param>
         <param-name>aaa</param-name>
         <param-value>okok</param-value>
     </context-param>
-    
+
     <!-- 리스너 클래스에 대한 정보 설정 -->
     <listener>
         <listener-class>bitcamp.java110.ex07.Listener01</listener-class>
@@ -39,18 +39,24 @@
         <param-name>aaa</param-name>
         <param-value>hello</param-value>
       </init-param>
+      <init-param>
+        <param-name>bbb</param-name>
+        <param-value>hello2</param-value>
+      </init-param>
+      <init-param>
+        <param-name>ccc</param-name>
+        <param-value>hello3</param-value>
+      </init-param>
       <load-on-startup>1</load-on-startup>
     </servlet>
-    
     <servlet>
       <servlet-name>Servlet05</servlet-name>
       <servlet-class>bitcamp.java110.ex06.Servlet05</servlet-class>
-      <!-- 서블릿 초기화 파라미터 설정  -->
+      <!-- 서블릿 초기화 파라미터 설정 -->
       <init-param>
         <param-name>aaa</param-name>
         <param-value>hello</param-value>
       </init-param>
-      <load-on-startup>1</load-on-startup>
     </servlet>
     
     <!-- 서블릿 클래스에 대해 요청 URL을 설정 -->
